--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+  font-size: 14px;
+  /* line-height: 24px; */
+  font-weight: 500;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
