--- a/src/styles.css
+++ b/src/styles.css
@@ -3,12 +3,6 @@
 @tailwind utilities;
 
 @layer components {
-  .transition-default {
-    transition-property: all;
-    transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    transition-duration: 150ms;
-  }
-
   .edit-wizard-panel {
     @apply flex flex-col gap-[14px] h-full overflow-y-auto scrollbar-default flex-grow;
   }
@@ -34,23 +28,19 @@
   }
 
   .input-text {
-    @apply px-[4px] w-full py-[2px] bg-bg.2 rounded-default placeholder-fg.2 outline-none focus:ring-inset focus:ring-1 ring-fg.0 transition-default;
+    @apply px-[4px] w-full py-[2px] bg-bg.2 rounded-default placeholder-fg.2 outline-none focus:ring-inset focus:ring-1 ring-fg.0;
   }
 
   .rounded-default {
     @apply rounded-[3px];
   }
 
-  .button-default {
-    @apply bg-fg.0 text-bg.0 rounded-default  px-[8px] py-[8px] flex justify-center items-center gap-2 transition-default hover:bg-fg.1;
-  }
-
-  .link {
-    @apply text-fg.1 transition-default hover:text-fg.0;
-  }
-
   .scrollbar-default {
     @apply scrollbar-thin scrollbar-thumb-fg.2;
+  }
+
+  .float-shadow {
+    box-shadow: 0 3px 10px rgb(0, 0, 0, 0.2);
   }
 }
 
